--- a/LeaveMGTSystem/appsettings.json
+++ b/LeaveMGTSystem/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "WebApiDatabase": "Host=localhost; Database=LeaveMGT1; Username=postgres; Password=1123"
+    "WebApiDatabase": "Host=localhost; Database=LeaveMGT2; Username=neaj; Password=1234"
   },
   "Logging": {
     "LogLevel": {
