--- a/.gitignore
+++ b/.gitignore
@@ -35,8 +35,7 @@ bld/
 [Ll]og/
 [Ll]ogs/
 
-# Visual Studio 2015/2017 cache/options directory
-.vs/
+
 # Uncomment if you have tasks that create the project's static files in wwwroot
 #wwwroot/
 
@@ -384,12 +383,8 @@ FodyWeavers.xsd
 
 # VS Code files for those working on multiple tools
 .vs
-.vscode/*
-!.vscode/settings.json
-!.vscode/tasks.json
-!.vscode/launch.json
-!.vscode/extensions.json
-*.code-workspace
+.vscode
+
 
 # Local History for Visual Studio Code
 .history/
