--- a/LeaveMGTSystem/appsettings.json
+++ b/LeaveMGTSystem/appsettings.json
@@ -2,6 +2,11 @@
   "ConnectionStrings": {
     "WebApiDatabase": "Host=localhost; Database=LeaveMGT2; Username=neaj; Password=1234"
   },
+  "EmailSettings": {
+    "EmailHost": "smtp.ethereal.email",
+  "EmailUsername": "theodora72@ethereal.email",
+  "EmailPassword": "kH5P2g13UH7ArbCW5f"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
